// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForgotMyPasswordForm> @Render should render 1`] = `
<Box
  max={500}
>
  <Row
    noGutters={false}
  >
    <Col>
      <Form
        className="w-100"
        id="ForgotMyPasswordForm"
        inline={false}
        onSubmit={[Function]}
      >
        <FormGroup
          controlId="ForgotMyPasswordEmail"
        >
          <FormControl
            isInvalid={false}
            name="email"
            onChange={[Function]}
            placeholder="@"
            required={true}
            type="email"
            value=""
          />
          <Feedback
            type="invalid"
          />
          <FormText
            className="text-muted"
          >
            We'll never share your email with anyone else.
          </FormText>
        </FormGroup>
        <Button
          active={false}
          className="float-right"
          disabled={false}
          id="ForgotMyPasswordSubmit"
          type="submit"
          variant="primary"
        >
          Reset Password
        </Button>
      </Form>
    </Col>
  </Row>
</Box>
`;

exports[`<ForgotMyPasswordForm> @Render should render back button 1`] = `
<Box
  max={500}
>
  <Row
    noGutters={false}
  >
    <Col>
      <Form
        className="w-100"
        id="ForgotMyPasswordForm"
        inline={false}
        onSubmit={[Function]}
      >
        <FormGroup
          controlId="ForgotMyPasswordEmail"
        >
          <FormControl
            isInvalid={false}
            name="email"
            onChange={[Function]}
            placeholder="@"
            required={true}
            type="email"
            value=""
          />
          <Feedback
            type="invalid"
          />
          <FormText
            className="text-muted"
          >
            We'll never share your email with anyone else.
          </FormText>
        </FormGroup>
        <Button
          active={false}
          className="float-right"
          disabled={false}
          id="ForgotMyPasswordSubmit"
          type="submit"
          variant="primary"
        >
          Reset Password
        </Button>
      </Form>
      <TextLink
        eventHandler={[MockFunction]}
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                192,
                512,
                Array [],
                "f0d9",
                "M192 127.338v257.324c0 17.818-21.543 26.741-34.142 14.142L29.196 270.142c-7.81-7.81-7.81-20.474 0-28.284l128.662-128.662c12.599-12.6 34.142-3.676 34.142 14.142z",
              ],
              "iconName": "caret-left",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
         back
      </TextLink>
    </Col>
  </Row>
</Box>
`;
